# vector-algorithms

./: .travis.yml  CHANGELOG.md  LICENSE  cabal.haskell-ci  cabal.project  uvector-algorithms.cabal  vector-algorithms.cabal
.github/workflows/: haskell-ci.yml
Data/Array/Vector/Algorithms/: Combinators.hs  Common.hs  Immutable.hs  Insertion.hs  Intro.hs  Merge.hs  Optimal.hs  Radix.hs  Search.hs  TriHeap.hs
Data/Array/Vector/Algorithms/Mutable/: Insertion.hs  Intro.hs  Optimal.hs  TriHeap.hs
Data/Vector/Algorithms/: AmericanFlag.hs  Combinators.hs  Common.hs  Heap.hs  Insertion.hs  Intro.hs  Merge.hs  Optimal.hs  Radix.hs  Search.hs  TriHeap.hs
bench/: Blocks.hs  Main.hs  uvector-algorithms-bench.cabal  vector-algorithms-bench.cabal
bench/simple/: Blocks.hs  Main.hs
src/Data/Vector/: Algorithms.hs
src/Data/Vector/Algorithms/: AmericanFlag.hs  Common.hs  Heap.hs  Insertion.hs  Intro.hs  Merge.hs  Optimal.hs  Radix.hs  Search.hs  Tim.hs
tests/: Optimal.hs  Properties.hs  Tests.hs  Util.hs
tests/properties/: Optimal.hs  Properties.hs  Tests.hs
