Name:              vector-algorithms
Version:           0.3
License:           BSD3
License-File:      LICENSE
Author:            Dan Doel
Maintainer:        Dan Doel <dan.doel@gmail.com>
Homepage:          http://code.haskell.org/~dolio/
Category:          Data
Synopsis:          Efficient algorithms for vector arrays
Description:       Efficient algorithms for vector arrays
                   be sure to compile with -O2, and -fvia-C -optc-O3 is
                   recommended.
Build-Type:        Simple
Cabal-Version:     >= 1.2.3

Library
    Build-Depends: base >= 3 && < 5, vector >= 0.5 && < 0.6

    Exposed-Modules:
        Data.Array.Vector.Algorithms.Combinators
        Data.Array.Vector.Algorithms.Optimal
        Data.Array.Vector.Algorithms.Insertion
        Data.Array.Vector.Algorithms.Intro
        Data.Array.Vector.Algorithms.Merge
        Data.Array.Vector.Algorithms.Radix
        Data.Array.Vector.Algorithms.Search
        Data.Array.Vector.Algorithms.TriHeap

    Other-Modules:
        Data.Array.Vector.Algorithms.Common

    Extensions:
        BangPatterns,
        TypeOperators,
        Rank2Types,
        ScopedTypeVariables

    GHC-Options:
        -O2
        -funbox-strict-fields
